@@ -133,6 +133,7 @@ Version 1.7.0-svn:
    * The add-ons directory, <preferences>/data/campaigns, has been renamed
      and it is now <preferences>/data/add-ons
    * Enabled hinting for texts displayed by Pango/Cairo (bug #13399)
+   * Made dismissing of recallable units undoable
 
 Version 1.6a:
  * User interface:
